--- a/src/views/layouts/main-index.hbs
+++ b/src/views/layouts/main-index.hbs
@@ -22,7 +22,7 @@
     rel="stylesheet">
 
   <!-- Bootstrap CSS File -->
-  <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <!-- <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
 
   <!-- Libraries CSS Files -->
   <link href="/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
@@ -43,10 +43,10 @@
   <link rel="stylesheet" href="/css/questions.css">
   <link rel="stylesheet" href="/css/answer.css">
   <link rel="stylesheet" href="/css/timeline.css">
-<link href="https://unpkg.com/bootstrap-table@1.18.3/dist/bootstrap-table.min.css" rel="stylesheet">
+<!--<link href="https://unpkg.com/bootstrap-table@1.18.3/dist/bootstrap-table.min.css" rel="stylesheet"> -->
 
   <link rel="stylesheet" href="/css/bootstrap.min.css">
-<link href="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.20/css/dataTables.bootstrap4.min.css" rel="stylesheet">
+<!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.20/css/dataTables.bootstrap4.min.css" rel="stylesheet"> -->
 
 
 
@@ -63,20 +63,22 @@
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 
   <!---    trumbowyg  -->
-
+<!--
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.13.0/themes/prism.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/plugins/line-highlight/prism-line-highlight.min.css">
 
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Trumbowyg/2.25.1/ui/trumbowyg.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Trumbowyg/2.25.1/ui/trumbowyg.min.css"> -->
     <!-- Import prismjs style in <head>... -->
 <!-- Import highlight plugin style in <head>... -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Trumbowyg/2.25.1/plugins/highlight/ui/trumbowyg.highlight.min.css">
-<!-- Import Trumbowyg MathML style in <head>... -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Trumbowyg/2.25.1/plugins/mathml/ui/trumbowyg.mathml.min.css">
-<!-- Import Trumbowyg colors style in <head>... -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Trumbowyg/2.25.1/plugins/colors/ui/trumbowyg.colors.min.css">
+  <!--
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Trumbowyg/2.25.1/plugins/highlight/ui/trumbowyg.highlight.min.css"> 
 
+<!-- Import Trumbowyg MathML style in <head>...
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Trumbowyg/2.25.1/plugins/mathml/ui/trumbowyg.mathml.min.css">
+<!-- Import Trumbowyg colors style in <head>... 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Trumbowyg/2.25.1/plugins/colors/ui/trumbowyg.colors.min.css">
+-->
 
   <!-- https://fonts.google.com/ -->
 
@@ -144,13 +146,13 @@
 
   <!--    <script src="/js/editortextarea.js"></script> 
   <script type="text/javascript"
-    src="https://cdn.jsdelivr.net/npm/froala-editor@latest/js/froala_editor.pkgd.min.js"></script> -->
+    src="https://cdn.jsdelivr.net/npm/froala-editor@latest/js/froala_editor.pkgd.min.js"></script> 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.20/js/jquery.dataTables.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.20/js/dataTables.bootstrap4.min.js"></script>
 
   <!-- <script src='https://cdn.tiny.cloud/1/kymx1msl7zbxn09i9uj1qtwv4829qeh7wwn143n0q5uw90vz/tinymce/5/tinymce.min.js' referrerpolicy="origin">
-  </script> -->
+  </script>
 
 
 <script src="https://cdn.jsdelivr.net/gh/WangYuLue/image-conversion/build/conversion.js"></script>
@@ -159,20 +161,21 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Trumbowyg/2.25.1/trumbowyg.min.js"></script>
     
-<!-- Import prismjs and Trumbowyg highlight at the end of <body>... -->
+<!-- Import prismjs and Trumbowyg highlight at the end of <body>...
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/prism.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/plugins/line-highlight/prism-line-highlight.min.js"></script>
 
 
   
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Trumbowyg/2.25.1/plugins/highlight/trumbowyg.highlight.min.js"></script>
-<!-- Import Trumbowyg MathJax at the end of <body>... -->
+<!-- Import Trumbowyg MathJax at the end of <body>... 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML"></script>
-<!-- Import Trumbowyg MathML plugin at the end of <body>... -->
+<!-- Import Trumbowyg MathML plugin at the end of <body>... 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Trumbowyg/2.25.1/plugins/mathml/trumbowyg.mathml.min.jss"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Trumbowyg/2.25.1/plugins/fontsize/trumbowyg.fontsize.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Trumbowyg/2.25.1/plugins/colors/trumbowyg.colors.min.js"></script>
+-->
 
   <script src='https://www.paypalobjects.com/js/external/api.js'></script>
 
