--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -12,8 +12,11 @@
 
 
         <div class="carousel-item active">
-          <div class="carousel-background"><img src="img/back5.jpg" alt="get fast answers"></div>
+          <div class="carousel-background"> <!-- <img src="img/back5.jpg" alt="get fast answers"> --></div>
           <div class="carousel-container">
+            <video autoplay muted loop id="myVideo" style="position: absolute; min-width: 100%; opacity: 0.7">
+  <source src="img/video3.mp4" type="video/mp4">
+</video>
             <div class="carousel-content">
 
               <div class="row container-title-index">
@@ -36,8 +39,10 @@
         {{> errors}}
 
         <div class="carousel-item">
-          <div class="carousel-background"><img src="img/back1.jpg" alt=""></div>
+          <div class="carousel-background"> <!--<img src="img/back1.jpg" alt=""> --></div>
           <div class="carousel-container">
+                        <video autoplay muted loop id="myVideo2" style="position: absolute; min-width: 100%; opacity: 0.7">
+  <source src="img/video4.mp4" type="video/mp4"> </video>
             <div class="carousel-content">
 
               <div class="row container-title-index">
@@ -60,8 +65,10 @@
 
 
         <div class="carousel-item">
-          <div class="carousel-background"><img src="img/back2.jpg" alt=""></div>
+          <div class="carousel-background"> <!-- <img src="img/back2.jpg" alt=""> --></div>
           <div class="carousel-container">
+                                    <video autoplay muted loop id="myVideo2" style="position: absolute; min-width: 100%; opacity: 0.6">
+  <source src="img/video5.mp4" type="video/mp4"> </video>
             <div class="carousel-content">
               <div class="row container-title-index">
                 <div class="col-md-10 offset-md-2">
