--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,6 +1,3 @@
-
-
-
 <!-- CARROUSEL  INTRO -->
 <section id="intro">
   <div class="intro-container">
@@ -12,19 +9,26 @@
 
 
         <div class="carousel-item active">
-          <div class="carousel-background"> <!-- <img src="img/back5.jpg" alt="get fast answers"> --></div>
+          <div class="carousel-background">
+            <!-- <img src="img/back5.jpg" alt="get fast answers"> -->
+            <img id="image1" data-src="img/back5.jpg" alt="get fast answers" src="" />
+          </div>
           <div class="carousel-container">
-            <video autoplay autoplay="autoplay" muted loop playsInline id="myVideo" style="position: absolute; min-width: 100%; opacity: 0.7">
-  <source src="img/video3.mp4" type="video/mp4">
-</video>
+            <video autoplay autoplay="autoplay" muted loop playsInline
+              style="position: absolute; min-width: 100%; opacity: 0.7" id="video1" src="" data-src="img/video3.mp4"
+              type="video/mp4">
+            </video>
+
             <div class="carousel-content">
 
               <div class="row container-title-index">
                 <div class="col-md-10 offset-md-2">
-                  <h1><a href="#intro" class="scrollto logov1"><img src="img/logoprice.png" alt='get quick answers from experts' /> </a></h1>
+                  <h1><a href="#intro" class="scrollto logov1"><img src="img/logoprice.png"
+                        alt='get quick answers from experts' /> </a></h1>
                   <h1 class="h1-title-index">
                     Do you need quick answers from experts?</h1>
-                  <p class="subtitle-index">Get answers from experts in math, science, computer programming, law, history or any other and just pay what you want</p>
+                  <p class="subtitle-index">Get answers from experts in math, science, computer programming, law,
+                    history or any other and just pay what you want</p>
                   <div class="mt-3">
                     <a {{#if user}} href="/questions/add" {{else}} href="/users/signup" {{/if}}><button
                         class="button-main-3">Get Answers</button></a>
@@ -39,15 +43,21 @@
         {{> errors}}
 
         <div class="carousel-item">
-          <div class="carousel-background"> <!--<img src="img/back1.jpg" alt=""> --></div>
+          <div class="carousel-background">
+            <!--<img src="img/back1.jpg" alt=""> -->
+            <img id="image2" data-src="img/back1.jpg" alt="math answers" src="" />
+          </div>
           <div class="carousel-container">
-                        <video autoplay autoplay="autoplay" muted loop playsInline id="myVideo2" style="position: absolute; min-width: 100%; opacity: 0.7">
-  <source src="img/video4.mp4" type="video/mp4"> </video>
+            <video autoplay autoplay="autoplay" muted loop playsInline
+              style="position: absolute; min-width: 100%; opacity: 0.7" id="video2" src="" data-src="img/video4.mp4"
+              type="video/mp4">
+            </video>
             <div class="carousel-content">
 
               <div class="row container-title-index">
                 <div class="col-md-10 offset-md-2">
-                  <h1><a href="#intro" class="scrollto logov1"><img src="img/logoprice.png" alt='answers to math, science, law, chemistry' /> </a></h1>
+                  <h1><a href="#intro" class="scrollto logov1"><img src="img/logoprice.png"
+                        alt='answers to math, science, law, chemistry' /> </a></h1>
                   <h1 class="h1-title-index">
                     Ask right now and pay just when you have answers!</h1>
                   <p class="subtitle-index">Put a reward on your question and just wait for the quick answers.</p>
@@ -65,16 +75,21 @@
 
 
         <div class="carousel-item">
-          <div class="carousel-background"> <!-- <img src="img/back2.jpg" alt=""> --></div>
+          <div class="carousel-background">
+            <!-- <img src="img/back2.jpg" alt=""> -->
+            <img id="image3" data-src="img/back2.jpg" alt="solve math questions" src="" />
+          </div>
           <div class="carousel-container">
-          <video autoplay="autoplay" muted loop playsInline id="myVideo2" style="position: absolute; min-width: 100%; opacity: 0.6">
-  <source src="img/video5.mp4" type="video/mp4"> </video>
+            <video autoplay autoplay="autoplay" muted loop playsInline 
+              style="position: absolute; min-width: 100%; opacity: 0.7" id="video3" src="" data-src="img/video5.mp4" type="video/mp4">
+            </video>
             <div class="carousel-content">
               <div class="row container-title-index">
                 <div class="col-md-10 offset-md-2">
-                  <h1><a href="#intro" class="scrollto logov1"><img src="img/logoprice.png" alt='solve math problems' /> </a></h1>
+                  <h1><a href="#intro" class="scrollto logov1"><img src="img/logoprice.png" alt='solve math problems' />
+                    </a></h1>
                   <h1 class="h1-title-index">
-                   You are an expert? Earn money answering!</h1>
+                    You are an expert? Earn money answering!</h1>
                   <p class="subtitle-index">Search by tags what questions you can answer and earn money.</p>
                   <div class="mt-3">
                     <a {{#if user}} href="/questions/add" {{else}} href="/users/signup" {{/if}}><button
