--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -28,7 +28,7 @@
                   <h1 class="h1-title-index">
                     Do you need quick answers from experts?</h1>
                   <p class="subtitle-index">Get answers from experts in math, science, computer programming, law,
-                    history or any other and just pay what you want</p>
+                    history or any other and pay what you want</p>
                   <div class="mt-3">
                     <a {{#if user}} href="/questions/add" {{else}} href="/users/signup" {{/if}}><button
                         class="button-main-3">Get Answers</button></a>
