--- a/src/views/partials/answer-or-question-modal.hbs
+++ b/src/views/partials/answer-or-question-modal.hbs
@@ -2,11 +2,11 @@
 <div class="modal fade " id="answer-or-question-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
   aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered  modal-lg " role="dialog">
-    <div class="modal-content ">
+    <div class="modal-content background-answer-question ">
       <div class="modal-header ">
-        <h5 class="modal-title" id="exampleModalLabel"> Welcome to Priceanswers</h5>
-        <button id="close-best-answer" type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
+        <h5 class="modal-title" id="exampleModalLabel" style="color: white;"> Welcome to Priceanswers</h5>
+        <button id="close-best-answer" type="button"  class="close" data-dismiss="modal" aria-label="Close">
+          <span style="color: white;" aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body modal-1 row">
