--- a/src/public/css/personal.css
+++ b/src/public/css/personal.css
@@ -230,7 +230,7 @@
     width: 300px;
     height: 92px;
     /* border-radius: 50%; */
-    background-color: white;
+  /*  background-color: white; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -617,4 +617,7 @@ margin-left: 1rem;
 }
 .button-modal-aq{
     margin: 15px 0 20px 0 !important;
+}
+.padding-0{
+    padding: 0 !important;
 }
