--- a/src/views/layouts/main-user.hbs
+++ b/src/views/layouts/main-user.hbs
@@ -30,6 +30,7 @@
   <link href="/css/style.css" rel="stylesheet">
   <link href="/css/personal.css" rel="stylesheet">
     <link href="/css/table.css" rel="stylesheet">
+  <link href="/css/login.css" rel="stylesheet">
 
 
 
@@ -147,7 +148,7 @@
   </script> -->
 
 
-<script src="https://cdn.jsdelivr.net/gh/WangYuLue/image-conversion/build/conversion.js"></script>
+<!--<script src="https://cdn.jsdelivr.net/gh/WangYuLue/image-conversion/build/conversion.js"></script> -->
 
 
 
@@ -168,7 +169,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Trumbowyg/2.25.1/plugins/fontsize/trumbowyg.fontsize.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Trumbowyg/2.25.1/plugins/colors/trumbowyg.colors.min.js"></script>
 
-  <script src='https://www.paypalobjects.com/js/external/api.js'></script>
+ <!-- <script src='https://www.paypalobjects.com/js/external/api.js'></script> -->
 
 
 
