--- a/src/views/questions/new-question.hbs
+++ b/src/views/questions/new-question.hbs
@@ -10,7 +10,7 @@
     <div class="tm-main row justify-content-md-center margin-x-0">
       <fieldset class="fieldset-question col-md-7">
         <legend class="legend-question">Do a new Question</legend>
-        <div class="card-body"> 
+        <div class="card-body padding-0"> 
           <form action="/questions/new-question" method="POST" enctype="multipart/form-data">
             <div class="mt-3">
               <label for="title">Title</label>
