--- a/src/views/users/signin.hbs
+++ b/src/views/users/signin.hbs
@@ -1,40 +1,64 @@
 <div class="row card border-card">
   <div class="banner-question u-section-2">
     <h3 class="u-heading-font u-text u-text-palette-1-base u-text-1">USER</h3>
-    <h2 class="u-heading-font u-text u-text-2">SIGN IN</h2>
+    <h2 class="u-heading-font u-text u-text-2">SIGN UP</h2>
     <div class="u-border-3 u-border-palette-1-base u-line u-line-horizontal u-line-1"></div>
   </div>
 
-  <div class="row">
-    <div class="col-md-3 mx-auto ">
-      <div class="card mt-5 text-center ">
-        <img src="/img/logoprice.png" class="e mx-auto display-block m-4 login-logo" alt="">
-        <div class="card-body login-card card-body-signup">
-          <form action="/users/signin" method="POST">
-            <div class="mt-3">
-              <input type="email" class="form-control" name="email" placeholder="Email" autofocus>
-            </div>
-            <div class="mt-3">
-              <input type="password" class="form-control" name="password" placeholder="password" autofocus>
-            </div>
-            <div class="mt-3">
-              <div class="register-text-login">
-                <a href="/users/recoverypass" class="link-primary link-forgot-pass">Forgot Password?</a>
+  <div class="login-wrap">
+    <div class="login-html">
+      <a href="/"><img src="/img/logoprice.png" class=" mx-auto display-block m-4 login-logo" alt=""> </a>
+      <div class="card-body card-body-signup">
+        <input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab">Sign In</label>
+        <input id="tab-2" type="radio" name="tab" class="sign-up"><label for="tab-2" class="tab">Sign Up</label>
+        <div class="login-form">
+          <div class="sign-in-htm">
+            <form action="/users/signin" method="POST">
+              <div class="group">
+                <label for="name" class="label">Email</label>
+                <input type="email" class="input" name="email" placeholder="" autofocus>
               </div>
-            </div>
-
-            <div class="mt-3">
-              <button type="submit" class="btn btn-primary btn-block">SignIn </button>
-            </div>
-            <div class="footer-login mt-4">
-              <div class="register-text-login">
-                You do not have an account? <a href="/users/signup" class="link-primary">Sign Up</a>
+              <div class="group">
+                <label for="email" class="label">Password</label>
+                <input type="password" class="input" name="password" placeholder="" autofocus>" />
               </div>
-            </div>
-          </form>
+              <div class="group">
+                <input type="submit" class="button" value="Sign In">
+              </div>
+              <div class="hr"></div>
+              <div class="foot-lnk">
+                <a href="/users/recoverypass"> Forgot Password?</a>
+              </div>
+            </form>
+          </div>
+          <div class="sign-up-htm">
+            <form action="/users/signup" method="POST">
+              <div class="group">
+                <label for="name" class="label">Name</label>
+                <input type="text" class="input" name="name" placeholder="" value="{{name}}" />
+              </div>
+              <div class="group">
+                <label for="email" class="label">Email</label>
+                <input type="email" class="input" name="email" placeholder="" value="{{email}}" />
+              </div>
+              <div class="group">
+                <label for="password" class="label">Password</label>
+                <input type="password" class="input" name="password" placeholder="" value="{{password}}" />
+              </div>
+              <div class="group">
+                <label for="confirmPassword" class="label">Repeat Password</label>
+                <input type="password" class="input" name="confirmPassword" placeholder="" value="{{confirmPassword}}" />
+              </div>
+              <div class="group">
+                <input type="submit" class="button" value="Sign Up">
+              </div>
+              <div class="hr"></div>
+              <div class="foot-lnk">
+                <label for="tab-1" style="color: white;">Already Member?</a>
+              </div>
+            </form>
+          </div>
         </div>
       </div>
-
     </div>
   </div>
-</div>
