--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -36,6 +36,8 @@ a{color:inherit;text-decoration:none}
 	transform:rotateY(180deg);
 	backface-visibility:hidden;
 	transition:all .4s linear;
+	-webkit-backface-visibility: hidden;
+	visibility:visible;
 }
 .login-html .sign-in,
 .login-html .sign-up,
