--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -13,10 +13,11 @@ a{color:inherit;text-decoration:none}
 	width:100%;
 	margin:auto;
 	max-width:525px;
+	margin-top:1rem;
 	min-height:670px;
 	position:relative;
 	background:url(../img/bg-login.jpg) no-repeat center;
-	box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
+	box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 30px rgba(0,0,0,.19);
 }
 .login-html{
 	width:100%;
