--- a/src/views/paypal/login-india.hbs
+++ b/src/views/paypal/login-india.hbs
@@ -15,7 +15,7 @@
         <header class="section-header wow fadeInUp">
           <h3>WARNING! Your paypal account is associated with "India" so we could not accept your account</h3>
           <p>
-            Unfortunately, PAYPAL is not accepting money transfers from abroad to India, so we recommend creating another Paypal account with another country..</p>
+            Unfortunately, PAYPAL is not accepting money transfers from abroad to India, so we recommend creating another Paypal account with another country. Sorry for the inconvenience</p>
           <div class="row justify-content-md-center">
             <a href="https://www.paypal.com"> <button class="button-main-4">Go to Paypal</button></a>
           </div>
