--- a/src/views/partials/see-own-question-aenabled.hbs
+++ b/src/views/partials/see-own-question-aenabled.hbs
@@ -422,12 +422,12 @@
         {{#if ../question.best_answer_chosen }}
         {{else}}
         <div class="button-see-answer2 ">
-          <button type="button" data-toggle="modal" data-target="#modal-best-answer" data-idanswer="{{_id}}"
+          <button type="button" data-toggle="modal" data-target="#modal-best-answer-{{_id}}" data-idanswer="{{_id}}"
              class="button-see-answer2 button-best-answer "> This is the best
             Answer!
           </button>
                <!---- MODAL DE CONFIRMACIÓN ---->
-          <div class="modal fade" id="modal-best-answer" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+          <div class="modal fade" id="modal-best-answer-{{_id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
             aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
               <div class="modal-content">
