--- a/src/views/emailtemplates/invoicepaidanswer/html.hbs
+++ b/src/views/emailtemplates/invoicepaidanswer/html.hbs
@@ -56,7 +56,7 @@
           <small>to</small>
           <address class="m-t-5 m-b-5">
             <strong class="text-inverse" style="    font-size: 16px;
-    font-weight: 600;">{{name}}</strong><br>
+    font-weight: 600;">{{name}} paypal account: {{paypal_email}}</strong><br>
           </address>
         </div>
         <div class="invoice-date" style="    display: table-cell;
